B-F Backup Sandbox 30.4.12/src/objects/news_settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Article_List__c</fullName>
        <description>The number of articles that will be returned on the News Home page</description>
        <label>Article List</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand_News_Chatter__c</fullName>
        <label>Brand News Chatter</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_News_Chatter__c</fullName>
        <label>Company News Chatter</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_News_Chatter__c</fullName>
        <label>Employee News Chatter</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EtQ_Chatter__c</fullName>
        <label>EtQ Chatter</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Legal_Text__c</fullName>
        <label>Expense Legal Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expenses_Chatter__c</fullName>
        <label>Expenses Chatter</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer__c</fullName>
        <label>Footer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_News_Chatter__c</fullName>
        <label>Industry News Chatter</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Processing_Chatter__c</fullName>
        <label>Invoice Processing Chatter</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>News_Exchange_Chatter__c</fullName>
        <label>News Exchange Chatter</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Title__c</fullName>
        <label>Page Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Story_of_the_Day_Chatter__c</fullName>
        <label>Story of the Day Chatter</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Chatter__c</fullName>
        <label>Travel Chatter</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_of_the_Day_Chatter__c</fullName>
        <label>Video of the Day Chatter</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>News Settings</label>
</CustomObject>